# HomeWorks

./: README.md
DZ0202/: DZ0202.sln
DZ0202/DZ0202/: DZ0202.cpp  DZ0202.vcxproj  DZ0202.vcxproj.filters
DZ0203/: DZ0203.sln
DZ0203/DZ0203/: DZ0203.cpp  DZ0203.vcxproj  DZ0203.vcxproj.filters
DZ0301/: DZ0301.sln
DZ0301/DZ0301/: DZ0301.cpp  DZ0301.vcxproj  DZ0301.vcxproj.filters
DZ0302/: DZ0302.sln
DZ0302/DZ0302/: DZ0302.cpp  DZ0302.vcxproj  DZ0302.vcxproj.filters
DZ0401/: DZ0401.sln
DZ0401/DZ0401/: DZ0401.cpp  DZ0401.vcxproj  DZ0401.vcxproj.filters
DZ0402/: DZ0402.sln
DZ0402/DZ0402/: DZ0402.cpp  DZ0402.vcxproj  DZ0402.vcxproj.filters
DZ0501/: DZ0501.sln
DZ0501/DZ0501/: DZ0501.cpp  DZ0501.vcxproj  DZ0501.vcxproj.filters
DZ0502/: DZ0502.sln
DZ0502/DZ0502/: DZ0502.cpp  DZ0502.vcxproj  DZ0502.vcxproj.filters
DZ0601/: DZ0601.sln
DZ0601/DZ0601/: DZ0601.cpp  DZ0601.vcxproj  Function.cpp  (+2 more)
DZ0602/: DZ0602.sln
DZ0603/: DZ0603.sln
DZ0701/: DZ0701.sln
DZ0702/: DZ0702.sln
DZ0707/: DZ0707.sln
DZ0801/: DZ0801.sln
DZ0802/: DZ0802.sln
DZ0901/: DZ0901.sln
DZ0902/: DZ0902.sln
DZ1001/: source.cpp
DZ1002/: CMakeLists.txt  DZ0603.vcxproj  Figure.cpp  Figure_Head.h  Parallelogram.h  R_triangle.cpp  R_triangle.h  Rectangle.cpp
DZ1002/DZ0603/DZ0603/: DZ0603.cpp  DZ0603.vcxproj.filters  Eq_triangle.cpp  Header.h  Parallelogram.cpp  Quadrangle.cpp  Rectangle.h  Rhombus.cpp  Square.h  Triangle.cpp
DZ1103/: CMakeLists.txt  DZ1102.cpp  Text.cpp  Text.h
Racing_Simulator/: Racing_Simulator.sln
cppm-homeworks_02_01/: cppm-homeworks_02_01.sln
(+78 files in other folders)
