cmake_minimum_required(VERSION 3.22.0)
project(project_dz1002)
add_executable(Project_DZ1002 DZ0603.cpp Header.h Eq_triangle.cpp Eq_triangle.h Figure.cpp Figure_Head.h I_triangle.cpp I_triangle.h Parallelogram.cpp Parallelogram.h Quadrangle.cpp Quadrangle.h R_triangle.cpp R_triangle.h Rectangle.cpp Rectangle.h Rhombus.cpp Rhombus.h Square.cpp Square.h Triangle.cpp Triangle.h)